# whiteboard

./: Procfile  README.md  db.sqlite3  docker-compose.yml  heroku.yml  pyproject.toml  requirements.txt
interview_prep/: asgi.py  settings.py  urls.py  wsgi.py
whiteboard/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
whiteboard/migrations/: 0001_initial.py
